sql/parse_file.cc
@@ -347,6 +347,48 @@ err_w_file:
   DBUG_RETURN(TRUE);
 }
 
+
+/*
+  Make a copy of a definition file with '-' added to the name
+
+  @param org_name   Original file name
+  @param new_name   Pointer to a buff of FN_REFLEN. Will be updated to name of
+                    backup file
+  @return 0 ok
+  @return 1 error
+*/
+
+int sql_backup_definition_file(const LEX_CSTRING *org_name,
+                               LEX_CSTRING *new_name)
+{
+  char *new_name_buff= (char*) new_name->str;
+  new_name->length= org_name->length+1;
+
+  memcpy(new_name_buff, org_name->str, org_name->length+1);
+  new_name_buff[org_name->length]= '-';
+  new_name_buff[org_name->length+1]= 0;
+  return my_copy(org_name->str, new_name->str, MYF(MY_WME));
+}
+
+/*
+  Restore copy of a definition file
+
+  @param org_name   Name of backup file (ending with '-' or '~')
+
+  @return 0 ok
+  @return 1 error
+*/
+
+int sql_restore_definition_file(const LEX_CSTRING *name)
+{
+  char new_name[FN_REFLEN+1];
+  memcpy(new_name, name->str, name->length-1);
+  new_name[name->length-1]= 0;
+  return mysql_file_rename(key_file_fileparser, name->str, new_name,
+                           MYF(MY_WME));
+}
+
+
 /**
   Renames a frm file (including backups) in same schema.
 
