sql/parse_file.h
@@ -96,6 +96,10 @@ my_bool rename_in_schema_file(THD *thd,
                               const char *schema, const char *old_name,
                               const char *new_db, const char *new_name);
 
+int sql_backup_definition_file(const LEX_CSTRING *org_name,
+                                   LEX_CSTRING *new_name);
+int sql_restore_definition_file(const LEX_CSTRING *name);
+
 class File_parser: public Sql_alloc
 {
   char *start, *end;
