sql/sql_trigger.h
@@ -220,7 +220,9 @@ public:
   }
   ~Table_triggers_list();
 
-  bool create_trigger(THD *thd, TABLE_LIST *table, String *stmt_query);
+  bool create_trigger(THD *thd, TABLE_LIST *table, String *stmt_query,
+                      DDL_LOG_STATE *ddl_log_state,
+                      DDL_LOG_STATE *ddl_log_state_tmp_file);
   bool drop_trigger(THD *thd, TABLE_LIST *table,
                     LEX_CSTRING *sp_name,
                     String *stmt_query, DDL_LOG_STATE *ddl_log_state);
